--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+## Own gitignore
+# VSCode proprietary folder settings.
+.vscode
+
+## Copied from template direcotory
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
