Ignore output folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ## Own gitignore
 # VSCode proprietary folder settings.
 .vscode
+output/*
 
 ## Copied from template direcotory
 # Byte-compiled / optimized / DLL files
