Added input and output folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ## Own gitignore
 # VSCode proprietary folder settings.
 .vscode
-output
+input/
+output/
 
 ## Copied from template direcotory
 # Byte-compiled / optimized / DLL files
